Dibuat menggunakan Colab

--- a/Tugas_Week_02.ipynb
+++ b/Tugas_Week_02.ipynb
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WvC5CQjYZfpi",
-        "outputId": "20163067-407e-4756-ab76-45ee88051532"
+        "outputId": "4ee46f57-ffe8-4633-c852-4f065e815280"
       },
       "outputs": [
         {
@@ -42,27 +42,27 @@
           "name": "stdout",
           "text": [
             "Masukkan nama 4 satpam yang akan bertugas:\n",
-            "Masukkan nama satpam ke-1: Febrian Abdul Mugni\n",
-            "Masukkan nama satpam ke-2: Brama Ragil Utomo\n",
-            "Masukkan nama satpam ke-3: Allief addaffa\n",
-            "Masukkan nama satpam ke-4: Wisnu tirta \n",
+            "Masukkan nama satpam ke-1: zurich sabil\n",
+            "Masukkan nama satpam ke-2: farrel apriandy\n",
+            "Masukkan nama satpam ke-3: nabila syafiqah\n",
+            "Masukkan nama satpam ke-4: erlyn nur\n",
             "\n",
             "Jadwal Piket Satpam Selama 2 Minggu:\n",
             "\n",
-            "Hari 1: Febrian Abdul Mugni\n",
-            "Hari 2: Brama Ragil Utomo\n",
-            "Hari 3: Allief addaffa\n",
-            "Hari 4: Wisnu tirta \n",
-            "Hari 5: Febrian Abdul Mugni\n",
-            "Hari 6: Brama Ragil Utomo\n",
-            "Hari 7: Allief addaffa\n",
-            "Hari 8: Wisnu tirta \n",
-            "Hari 9: Febrian Abdul Mugni\n",
-            "Hari 10: Brama Ragil Utomo\n",
-            "Hari 11: Allief addaffa\n",
-            "Hari 12: Wisnu tirta \n",
-            "Hari 13: Febrian Abdul Mugni\n",
-            "Hari 14: Brama Ragil Utomo\n"
+            "Hari 1: zurich sabil\n",
+            "Hari 2: farrel apriandy\n",
+            "Hari 3: nabila syafiqah\n",
+            "Hari 4: erlyn nur\n",
+            "Hari 5: zurich sabil\n",
+            "Hari 6: farrel apriandy\n",
+            "Hari 7: nabila syafiqah\n",
+            "Hari 8: erlyn nur\n",
+            "Hari 9: zurich sabil\n",
+            "Hari 10: farrel apriandy\n",
+            "Hari 11: nabila syafiqah\n",
+            "Hari 12: erlyn nur\n",
+            "Hari 13: zurich sabil\n",
+            "Hari 14: farrel apriandy\n"
           ]
         }
       ],
