Dibuat menggunakan Colab

--- a/Tugas_Week_06.ipynb
+++ b/Tugas_Week_06.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZ5Dw5jipVbX8iXL3jvUXU",
+      "authorship_tag": "ABX9TyNMK+goyv27QtnY1WAXW/r1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,6 +127,203 @@
             "Kemeja Flanel: Rp200000\n",
             "Celana Chino: Rp180000\n",
             "Kaos Polos: Rp75000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def quick_sort(arr, reverse=False):\n",
+        "    if len(arr) <= 1:\n",
+        "        return arr\n",
+        "    pivot = arr[len(arr) // 2]\n",
+        "    left = [x for x in arr if x < pivot]\n",
+        "    middle = [x for x in arr if x == pivot]\n",
+        "    right = [x for x in arr if x > pivot]\n",
+        "    if reverse:\n",
+        "        return quick_sort(right, reverse) + middle + quick_sort(left, reverse)\n",
+        "    else:\n",
+        "        return quick_sort(left, reverse) + middle + quick_sort(right, reverse)\n",
+        "# Contoh data produk\n",
+        "produk = [\n",
+        "    {\"nama\": \"Kemeja Flanel\", \"harga\": 200000, \"rating\": 4.5},\n",
+        "    {\"nama\": \"Kaos Polos\", \"harga\": 75000, \"rating\": 4.0},\n",
+        "    {\"nama\": \"Jaket Denim\", \"harga\": 350000, \"rating\": 4.8},\n",
+        "    {\"nama\": \"Celana Chino\", \"harga\": 180000, \"rating\": 4.2},\n",
+        "    {\"nama\": \"Sweater Rajut\", \"harga\": 250000, \"rating\": 4.7},\n",
+        "]\n",
+        "\n",
+        "# Pilihan pengguna\n",
+        "print(\"Pilih metode pengurutan:\")\n",
+        "print(\"1. Berdasarkan harga\")\n",
+        "print(\"2. Berdasarkan rating\")\n",
+        "pilihan = int(input(\"Masukkan pilihan (1/2): \"))\n",
+        "\n",
+        "if pilihan == 1:\n",
+        "    harga_produk = [p[\"harga\"] for p in produk]\n",
+        "    sorted_harga_asc = quick_sort(harga_produk.copy())\n",
+        "    sorted_harga_desc = quick_sort(harga_produk.copy(), reverse=True)\n",
+        "\n",
+        "    print(\"\\nHarga setelah Quick Sort (termurah ke termahal):\")\n",
+        "    for harga in sorted_harga_asc:\n",
+        "        for p in produk:\n",
+        "            if p[\"harga\"] == harga:\n",
+        "                print(f\"{p['nama']}: Rp{p['harga']}\")\n",
+        "                break\n",
+        "\n",
+        "    print(\"\\nHarga setelah Quick Sort (termahal ke termurah):\")\n",
+        "    for harga in sorted_harga_desc:\n",
+        "        for p in produk:\n",
+        "            if p[\"harga\"] == harga:\n",
+        "                print(f\"{p['nama']}: Rp{p['harga']}\")\n",
+        "                break\n",
+        "\n",
+        "elif pilihan == 2:\n",
+        "    rating_produk = [p[\"rating\"] for p in produk]\n",
+        "    sorted_rating_asc = quick_sort(rating_produk.copy())\n",
+        "    sorted_rating_desc = quick_sort(rating_produk.copy(), reverse=True)\n",
+        "\n",
+        "    print(\"\\nRating setelah Quick Sort (terendah ke tertinggi):\")\n",
+        "    for rating in sorted_rating_asc:\n",
+        "        for p in produk:\n",
+        "            if p[\"rating\"] == rating:\n",
+        "                print(f\"{p['nama']}: Rating {p['rating']}\")\n",
+        "                break\n",
+        "\n",
+        "    print(\"\\nRating setelah Quick Sort (tertinggi ke terendah):\")\n",
+        "    for rating in sorted_rating_desc:\n",
+        "        for p in produk:\n",
+        "            if p[\"rating\"] == rating:\n",
+        "                print(f\"{p['nama']}: Rating {p['rating']}\")\n",
+        "                break\n",
+        "\n",
+        "else:\n",
+        "    print(\"Pilihan tidak valid. Silakan jalankan ulang program.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nRbgA0MZvvl6",
+        "outputId": "beb6d297-320d-4fa5-d1ae-21fe222c4e73"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pilih metode pengurutan:\n",
+            "1. Berdasarkan harga\n",
+            "2. Berdasarkan rating\n",
+            "Masukkan pilihan (1/2): 2\n",
+            "\n",
+            "Rating setelah Quick Sort (terendah ke tertinggi):\n",
+            "Kaos Polos: Rating 4.0\n",
+            "Celana Chino: Rating 4.2\n",
+            "Kemeja Flanel: Rating 4.5\n",
+            "Sweater Rajut: Rating 4.7\n",
+            "Jaket Denim: Rating 4.8\n",
+            "\n",
+            "Rating setelah Quick Sort (tertinggi ke terendah):\n",
+            "Jaket Denim: Rating 4.8\n",
+            "Sweater Rajut: Rating 4.7\n",
+            "Kemeja Flanel: Rating 4.5\n",
+            "Celana Chino: Rating 4.2\n",
+            "Kaos Polos: Rating 4.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def quick_sort(arr, reverse=False):\n",
+        "    if len(arr) <= 1:\n",
+        "        return arr\n",
+        "    pivot = arr[len(arr) // 2]\n",
+        "    left = [x for x in arr if x < pivot]\n",
+        "    middle = [x for x in arr if x == pivot]\n",
+        "    right = [x for x in arr if x > pivot]\n",
+        "    if reverse:\n",
+        "        return quick_sort(right, reverse) + middle + quick_sort(left, reverse)\n",
+        "    else:\n",
+        "        return quick_sort(left, reverse) + middle + quick_sort(right, reverse)\n",
+        "# Contoh data produk\n",
+        "produk = [\n",
+        "    {\"nama\": \"Kemeja Flanel\", \"harga\": 200000, \"rating\": 4.5},\n",
+        "    {\"nama\": \"Kaos Polos\", \"harga\": 75000, \"rating\": 4.0},\n",
+        "    {\"nama\": \"Jaket Denim\", \"harga\": 350000, \"rating\": 4.8},\n",
+        "    {\"nama\": \"Celana Chino\", \"harga\": 180000, \"rating\": 4.2},\n",
+        "    {\"nama\": \"Sweater Rajut\", \"harga\": 250000, \"rating\": 4.7},\n",
+        "]\n",
+        "\n",
+        "# Pilihan pengguna\n",
+        "print(\"Pilih metode pengurutan:\")\n",
+        "print(\"1. Berdasarkan harga\")\n",
+        "print(\"2. Berdasarkan rating\")\n",
+        "pilihan = int(input(\"Masukkan pilihan (1/2): \"))\n",
+        "\n",
+        "if pilihan == 1:\n",
+        "    harga_produk = [p[\"harga\"] for p in produk]\n",
+        "    sorted_harga_asc = quick_sort(harga_produk.copy())\n",
+        "    sorted_harga_desc = quick_sort(harga_produk.copy(), reverse=True)\n",
+        "\n",
+        "    print(\"\\nHarga setelah Quick Sort (termurah ke termahal):\")\n",
+        "    for harga in sorted_harga_asc:\n",
+        "        for p in produk:\n",
+        "            if p[\"harga\"] == harga:\n",
+        "                print(f\"{p['nama']}: Rp{p['harga']}\")\n",
+        "                break\n",
+        "\n",
+        "    print(\"\\nHarga setelah Quick Sort (termahal ke termurah):\")\n",
+        "    for harga in sorted_harga_desc:\n",
+        "        for p in produk:\n",
+        "            if p[\"harga\"] == harga:\n",
+        "                print(f\"{p['nama']}: Rp{p['harga']}\")\n",
+        "                break\n",
+        "\n",
+        "elif pilihan == 2:\n",
+        "    rating_produk = [p[\"rating\"] for p in produk]\n",
+        "    sorted_rating_asc = quick_sort(rating_produk.copy())\n",
+        "    sorted_rating_desc = quick_sort(rating_produk.copy(), reverse=True)\n",
+        "\n",
+        "    print(\"\\nRating setelah Quick Sort (terendah ke tertinggi):\")\n",
+        "    for rating in sorted_rating_asc:\n",
+        "        for p in produk:\n",
+        "            if p[\"rating\"] == rating:\n",
+        "                print(f\"{p['nama']}: Rating {p['rating']}\")\n",
+        "                break\n",
+        "\n",
+        "    print(\"\\nRating setelah Quick Sort (tertinggi ke terendah):\")\n",
+        "    for rating in sorted_rating_desc:\n",
+        "        for p in produk:\n",
+        "            if p[\"rating\"] == rating:\n",
+        "                print(f\"{p['nama']}: Rating {p['rating']}\")\n",
+        "                break\n",
+        "\n",
+        "else:\n",
+        "    print(\"Pilihan tidak valid. Silakan jalankan ulang program.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mJ3tpsDZvx-R",
+        "outputId": "48e10270-7d79-43be-b73d-27dac9bbbb90"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pilih metode pengurutan:\n",
+            "1. Berdasarkan harga\n",
+            "2. Berdasarkan rating\n",
+            "Masukkan pilihan (1/2): 345\n",
+            "Pilihan tidak valid. Silakan jalankan ulang program.\n"
           ]
         }
       ]
